Fixed #17865 -- Strip whitespaces from the paths when using the CachedStaticFilesStorage backend.
git-svn-id: http://code.djangoproject.com/svn/django/trunk@17696 bcc190cf-cafb-0310-a4f2-bffc1f526a37

--- a/tests/regressiontests/staticfiles_tests/project/documents/cached/denorm.css
+++ b/tests/regressiontests/staticfiles_tests/project/documents/cached/denorm.css
@@ -1,1 +1,4 @@
 @import url("..//cached///styles.css");
+body {
+    background: #d3d6d8 url(img/relative.png );
+}
